test/functions/bradc/useBeforeDef/useBeforeDef.good
useBeforeDef.chpl:1: In function 'foo':
useBeforeDef.chpl:1: error: 'y' used before defined
useBeforeDef.chpl:5: note: defined here
