test/functions/bradc/useBeforeDef/useBeforeDef.chpl
proc foo(x: y.type) {
  writeln("x is: ", x);
}

var y: int = 2;

foo(y);